Archive2/48/a3a5df5f7bf9f7/output
main.cpp:3:12: error: expected primary-expression before '...' token
   int arr={.....}
            ^
main.cpp:3:15: error: expected '}' before '.' token
   int arr={.....}
               ^
main.cpp:3:15: error: expected ',' or ';' before '.' token
main.cpp:3:17: error: expected declaration before '}' token
   int arr={.....}
                 ^
